--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ Notre mission est de donner vie aux idées à travers des visuels professionnels
                             <i class="fas fa-envelope"></i>
                         </div>
                         <h3>Email</h3>
-                        <p>contact@visionconcept.com</p>
+                        <p>visuelconcept10@gmail.com</p>
                     </div>
                     
                     <div class="info-card">
@@ -297,4 +297,5 @@ Notre mission est de donner vie aux idées à travers des visuels professionnels
 </body>
 
 </html>
+
 
