--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <button class="filter-btn" data-filter="Affiche">Affiche</button>
                 <button class="filter-btn" data-filter="Logo">Logo</button>
                 <button class="filter-btn" data-filter="Impression">impression</button>
+                <button class="filter-btn" data-filter="personnalisation">Personnalisation sur tous supports</button>
             </div>
             
             <div class="portfolio-grid">
@@ -297,5 +298,6 @@ Notre mission est de donner vie aux idées à travers des visuels professionnels
 </body>
 
 </html>
+
 
 
